Set up routing for project

--- a/app/components/app/app-component.html
+++ b/app/components/app/app-component.html
@@ -1,4 +1,5 @@
 <div id="wrapper">
   <header-component></header-component>
-  <side-menu></side-menu>
+  <sidemenu></sidemenu>
+  <router-view></router-view>
 </div>
