--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,11 +1,11 @@
 <header id="header">
-  <h1><a href="#">Village Square</a></h1>
+  <h1><router-link to="/">Village Square</router-link></h1>
   <nav class="links">
     <ul>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Sign Up</a></li>
-      <li><a href="#">Login</a></li>
+      <li><router-link to="/signup">Sign Up</router-link></router-link></li>
+      <li><router-link to="/login">Login</router-link></li>
       <li><a href="#">Top Stories</a></li>
     </ul>
   </nav>
