set up components

--- a/app/components/auth/login/login.html
+++ b/app/components/auth/login/login.html
@@ -1,3 +1,15 @@
-<div class="wrapper">
-  Login Here
-</div>
+<section class="post center">
+  <form>
+    <div class="search">
+      <input type="text" name="username" placeholder="Username"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="password" name="password" placeholder="Password"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="button" name="submit" value="Log In"/>
+    </div>
+  </form>
+</section>
