--- a/app/components/auth/signup/signup.html
+++ b/app/components/auth/signup/signup.html
@@ -1,3 +1,23 @@
-<div class="wrapper">
-  Sign Up here
-</div>
+<section class="post center">
+  <form>
+    <div class="search">
+      <input type="text" name="username" placeholder="Username"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="email" name="email" placeholder="Email Address"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="password" name="password" placeholder="Password"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="password" name="password" placeholder="Confirm password"/>
+    </div>
+    &nbsp;
+    <div class="search">
+      <input type="button" name="submit" value="Sign Up"/>
+    </div>
+  </form>
+</section>
