--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -43,6 +43,12 @@
 		-webkit-text-size-adjust: none;
 	}
 
+  .center {
+    margin: auto !important;
+    width: 50%;
+    padding: 10px;
+  }
+
 /* Box Model */
 
 	*, *:before, *:after {
