--- a/app/components/menu/menu.html
+++ b/app/components/menu/menu.html
@@ -11,26 +11,26 @@
     <section>
       <ul class="links">
         <li>
-          <a href="#">
-            <h3>Lorem ipsum</h3>
-            <p>Feugiat tempus veroeros dolor</p>
+          <a href="#/posts/new">
+            <h3>New Post</h3>
+            <p>Tell us something new</p>
           </a>
         </li>
         <li>
           <a href="#">
-            <h3>Dolor sit amet</h3>
+            <h3>My Posts</h3>
             <p>Sed vitae justo condimentum</p>
           </a>
         </li>
         <li>
           <a href="#">
-            <h3>Feugiat veroeros</h3>
+            <h3>My Top Stories</h3>
             <p>Phasellus sed ultricies mi congue</p>
           </a>
         </li>
         <li>
           <a href="#">
-            <h3>Etiam sed consequat</h3>
+            <h3>Recently Posted By Me</h3>
             <p>Porta lectus amet ultricies</p>
           </a>
         </li>
@@ -40,7 +40,7 @@
   <!-- Actions -->
     <section>
       <ul class="actions vertical">
-        <li><a href="#" class="button big fit">Log In</a></li>
+        <li><a href="#" class="button big fit" @click="logout()">Log Out</a></li>
       </ul>
     </section>
 
