--- a/app/components/posts/post.html
+++ b/app/components/posts/post.html
@@ -1,7 +1,7 @@
 <article class="post">
   <header>
     <div class="title">
-      <h2><a href="#">Before it began..</a></h2>
+      <h2><router-link :to="{ name: 'post', params: {id: post.id }}">{{ post.title }}</router-link></h2>
       <p>The compelling story of a political suicide</p>
     </div>
     <div class="meta">
@@ -9,8 +9,7 @@
       <a href="#" class="author"><span class="name">Jane Doe</span><img src="assets/images/avatar.jpg" alt="" /></a>
     </div>
   </header>
-  <a href="#" class="image featured"><img src="assets/images/pic01.jpg" alt="" /></a>
-  <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+  <div v-html="post.body"></div>
   <footer>
     <ul class="actions">
       <li><a href="#" class="button big">Continue Reading</a></li>
