--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -43,6 +43,41 @@
 		-webkit-text-size-adjust: none;
 	}
 
+  /* The alert message box */
+  .alert {
+    padding: 20px;
+    color: white;
+    margin-bottom: 15px;
+  }
+
+  .alert.success {background-color: #4CAF50;}
+  .alert.info {background-color: #2196F3;}
+  .alert.warning {background-color: #ff9800;}
+  .alert.error {background-color: #f44336;}
+
+  .ql-container .ql-editor {
+    min-height: 20em;
+    padding-bottom: 1em;
+    max-height: 25em;
+  }
+
+/* The close button */
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+/* When moving the mouse over the close button */
+  .closebtn:hover {
+    color: black;
+  }
+
   .center {
     margin: auto !important;
     width: 50%;
